--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@ body {
   border-radius: 8px;
   width: 100%;
   outline: none;
+  color: #0B0A0A;
 }
 
 .form-container {
@@ -144,7 +145,7 @@ body {
   margin: 0 3px;
   width: 40px;
   height: 40px;
-  color: #512da8 !important ;
+  color: #512da8 !important;
   font-size: 20px;
 }
 
